Update to 1.16.0, fix date in changelog

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ openal-soft-1.12.854.tar.bz2
 /openal-soft-1.13.tar.bz2
 /openal-soft-1.14.tar.bz2
 /openal-soft-1.15.1.tar.bz2
+/openal-soft-1.16.0.tar.bz2
